PLANET-4811 Fix too low z-index on wrapper
* Otherwise it would have the same z-index as the paragraphs it's
floating next to, in the side style. That made the links unclickable.

--- a/assets/src/styles/blocks/Submenu.scss
+++ b/assets/src/styles/blocks/Submenu.scss
@@ -1,3 +1,8 @@
+// On outer element as otherwise it will not be clickable when floating on the right.
+div[data-render="planet4-blocks/submenu"] {
+  z-index: 4;
+}
+
 .submenu-block {
   background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 5px 5px 5px 0 rgba(128, 128, 128, 0.5);
